--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -34,6 +34,6 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  twitter_consumer_secret: <%= ENV.fetch("TWITTER_CONSUMER", "kj2NTBpt6IxZNqtW1wWz7VCcpr7uYwJWzPKCppS5ZwbSaHhijq") %>
-  twitter_access_token_secret: <%= ENV.fetch("TWITTER_TOKEN", "37z2jQLOfZXczLGGWMfp7VKHv0keJjs2YyCdd2885sVB8") %>
-  devise_secret_key: <%= ENV.fetch("DEVISE_SECRET", "37z2jQLOfZXczLGGWMfp7VKHv0keJjs2YyCdd2885sVB8") %>
+  twitter_consumer_secret: <%= ENV["TWITTER_CONSUMER"] %>
+  twitter_access_token_secret: <%= ENV["TWITTER_TOKEN"] %>
+  devise_secret_key: <%= ENV["DEVISE_SECRET"] %>
