modifying files with keys

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ build-iPhoneSimulator/
 /public/packs
 /public/packs-test
 /node_modules
+
+# Ignore encrypted secrets key file.
+config/secrets.yml.key
