--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 /tmp/
 /spec/services/support/fixtures
 /public/assets/
-/config/secrets.yml
+
 
 # Used by dotenv library to load environment variables.
 # .env
@@ -57,3 +57,6 @@ build-iPhoneSimulator/
 /public/packs
 /public/packs-test
 /node_modules
+
+# Ignore encrypted secrets key file.
+config/secrets.yml.key
